fix: added a text-align: center to control the acess-denied container

--- a/src/global.css
+++ b/src/global.css
@@ -57,6 +57,7 @@ h6 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 	margin-top: 4rem;
 }
 
